业务伙伴梳理

--- a/ibas.businesspartner.service/src/main/webapp/tsconfig.json
+++ b/ibas.businesspartner.service/src/main/webapp/tsconfig.json
@@ -11,7 +11,10 @@
             ],
             "openui5/index": [
                 "./3rdparty/openui5/index"
-            ]
+            ],
+            "3rdparty/materials/index": [
+                "./3rdparty/materials/index"
+            ],
         }
     }
 }
