--- a/ibas.businesspartner.service/src/main/webapp/tsconfig.json
+++ b/ibas.businesspartner.service/src/main/webapp/tsconfig.json
@@ -1,13 +1,20 @@
 {
   "compilerOptions": {
     "noImplicitAny": false,
-    "removeComments": true,
+    "removeComments": false,
     "target": "es6",
     "preserveConstEnums": true,
     "outFile": "./index.js",
     "declaration": true,
     "sourceMap": true
   },
+  "include": [
+    "./3rdparty/ibas/index.d.ts",
+    "./3rdparty/shell/index.d.ts",
+    "./3rdparty/openui5/index.d.ts",
+    "./3rdparty/initialfantasy/index.d.ts",
+    "./3rdparty/materials/index.d.ts"
+  ],
   "files": [
     "./bsapp/Console.ts"
   ]
