增加税组相关

--- a/ibas.businesspartner.service/src/main/webapp/tsconfig.json
+++ b/ibas.businesspartner.service/src/main/webapp/tsconfig.json
@@ -13,7 +13,8 @@
     "./3rdparty/shell/index.d.ts",
     "./3rdparty/openui5/index.d.ts",
     "./3rdparty/initialfantasy/index.d.ts",
-    "./3rdparty/materials/index.d.ts"
+    "./3rdparty/materials/index.d.ts",
+    "./3rdparty/accounting/index.d.ts"
   ],
   "files": [
     "./bsapp/Console.ts"
